# pyslash

./: .gitignore  .travis.yml  CHANGELOG.md  Pipfile  README.md  execute.py  nikkansports.py  project.clj  pyproject.toml  requirements.txt  setup.py  update-requirements.sh
.github/workflows/: ci.yml
crawler/: baseball.py  exception.py
doc/: intro.md
nikkansports/: baseball.py  exception.py  nikkansports.py
nikkansports/tests/: test_baseball.py
pyslash/: __init__.py  baseball.py  executor.py  pyslash.py
pyslash/crawler/: baseball.py  exception.py
pyslash/tests/: test_baseball.py
src/blue/lions/pyslash/: core.clj  net.clj  util.clj
src/pyslash/: core.clj
test/: test_baseball.py  test_create_dict_01.html  test_create_dict_02.html  test_create_dict_03.html  test_create_dict_error.html
test/blue/lions/pyslash/: core_test.clj  util_test.clj
test/pyslash/: core_test.clj
tests/: __init__.py  test_baseball.py
