[tool.poetry]
name = "pyslash"
version = "2.0.0"
description = ""
authors = ["HASEBA Junya <7pairs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
