[tool.poetry]
name = "pyslash"
version = "2.0.0"
description = ""
authors = ["HASEBA Junya <7pairs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
click = "^8.1.3"
injector = "^0.20.1"
jinja2 = "^3.1.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
